--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,19 +1,30 @@
+#Development environment configuration
 server:
-  port: ${PORT:8080}
+  port: 8083
 
+# Database configuration
 spring:
   datasource:
     url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
+#File Upload
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+
+#JPA and Hibernate configuration
   jpa:
     hibernate:
-      ddl-auto: validate
-    show-sql: false
+      ddl-auto: update
+    show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        format_sql: true
 
   security:
     oauth2:
@@ -27,27 +38,31 @@ spring:
               - profile
               - openid
 
+file:
+  upload-dir: uploads
+
+
 logging:
   level:
-    root: INFO
-    org.springframework.security: INFO
+    org.springframework.security: DEBUG
 
 security:
   jwt:
-    secret: ${JWT_SECRET}
+    secret: "${JWT_SECRET}"
     issuer: ${JWT_ISSUER}
     access-ttl-seconds: ${JWT_ACCESS_TTL_SECONDS:3600}
     refresh-ttl-seconds: ${JWT_REFRESH_TTL_SECONDS:86400}
-    refresh-token-cookie-name: refreshToken
-    cookie-secure: true
-    cookie-http-only: true
-    cookie-same-site: none
-    cookie-domain: ${COOKIE_DOMAIN}
+    refresh-token-cookie-name: ${JWT_REFRESH_COOKIE_NAME:refreshToken}
+    cookie-secure: ${JWT_COOKIE_SECURE:true}
+    cookie-http-only: ${JWT_COOKIE_HTTP_ONLY:true}
+    cookie-same-site: ${JWT_COOKIE_SAME_SITE:lax}
+    cookie-domain: ${JWT_COOKIE_DOMAIN:localhost}
+
 
 app:
   cors:
-    front-end-url: ${FRONTEND_URL}
+    front-end-url: http://localhost:5173
   auth:
     frontend:
-      success-redirect: ${FRONTEND_URL}/auth/success
-      failure-redirect: ${FRONTEND_URL}/auth/failure
+      success-redirect: http://localhost:5173/oauth/success
+      failure-redirect: http://localhost:5173/oauth/failure
